--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap" rel="stylesheet">
   </head>
-  <body class="bg-white text-gray-800">
+  <body class="bg-white text-gray-800 dark:bg-gray-900">
     <div id="app"></div>
     <script type="module" src="/src/app.tsx"></script>
   </body>
