--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="A simple itinerary to-do app" />
     <meta name="theme-color" content="#000000" />
   </head>
-  <body>
+  <body class="overflow-hidden">
     <div id="app"></div>
     <script type="module" src="/src/app.tsx"></script>
   </body>
