--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="theme-color" content="#000" />
-    <link rel="apple-touch-icon" href="https://konstaui.com/kitchen-sink/react/dist/apple-touch-icon.png">
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <title>Itinerary Todo App</title>
     <meta name="description" content="A simple itinerary to-do app" />
+    <meta name="theme-color" content="#000000" />
   </head>
-  <body>
+  <body class="overflow-hidden">
     <div id="app"></div>
     <script type="module" src="/src/app.tsx"></script>
   </body>
